samples/_failures_safe/1761529669_3d4a8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a1ced72.c:153: error: expected ‘;’, ‘,’ or ‘)’ at end of input
